k8s/approuting-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartprocure-ingress
  namespace: smartprocure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - smartprocure.20.247.248.30.nip.io
    secretName: smartprocure-tls
  rules:
  - host: smartprocure.20.247.248.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
